# CAG

./: .dockerignore.txt  .gitignore  Caddyfile  Dockerfile  Makefile  deploy.sh  docker-compose.prod.yml  environment.yaml  environment.yml  pyproject.toml  requirements.docker.txt
frontend/: constants.ts  how-it-works.css  index.css  index.html  index.tsx  package-lock.json  package.json  types.ts  utils.ts  vite-env.d.ts
frontend/components/: AccessGate.tsx  ChatMessage.tsx  DemoReportCard.tsx  FloatingActionButton.tsx  Icons.tsx  PDFViewer.tsx  ReportCard.tsx  TablePreview.tsx  TierSelector.tsx
frontend/components/HowItWorks/: HowItWorks.tsx
frontend/components/HowItWorks/shared/: CalloutBox.tsx  CodeBlock.tsx  DiagramCard.tsx  DocSection.tsx  MermaidDiagram.tsx  TabbedPrompt.tsx  TechBadge.tsx
frontend/components/HowItWorks/tabs/: AIFeatures.tsx  DataPipeline.tsx  FrontendArchitecture.tsx  Infrastructure.tsx  Overview.tsx  RAGSearch.tsx
frontend/hooks/: index.ts  useCharts.ts  useChatStream.ts  useOverview.ts  useReport.ts  useReports.ts  useSeries.ts  useSeriesChat.ts  useSummaries.ts  useTables.ts
frontend/lib/: api.ts  citationUtils.ts  posthog.ts
frontend/stores/: appStore.ts
scripts/: docling_analysis.py  docling_test.py  fix_job_tracker.py  merge_llm_overview.py  process_manual_summaries.py  run_baseline_diagnostics.py  run_baseline_diagnostics_v2.py  run_phase10a_selective.py  test_orchestrator.py
src/api/: __init__.py  config.py  main.py  models.py  rate_limit.py
src/api/routes/: __init__.py  assets.py  chat.py  health.py  overview.py  reports.py  series.py  summaries.py
src/api/services/: __init__.py  asset_service.py  report_service.py  streaming_wrapper.py
src/api/utils/: table_utils.py
src/core/: chart_contracts.py  config.py  data_contracts.py  table_contracts.py
src/rag_pipeline/: __init__.py  cli.py  embedding_service.py  indexer.py  models.py  qdrant_service.py  query_enhancer.py  rag_service.py  report_registry.py  retrieval_service.py
tests/evaluation_framework/: RAG_EVALUATION_GUIDE.md  evaluate.py  evaluation_utils.py  manual_testing_template.csv  quick_start.py  sample_test_cases.json  verified_test_cases.json
tests/evaluation_framework/results/: evaluation_20260104_120807.json  evaluation_20260104_120807.md  evaluation_20260105_141812.json  evaluation_20260105_141812.md  evaluation_20260106_001558.json
tests/evaluation_framework/test_cases/: 2020_16_CooperativeBanks_test_cases.json  2022_29_DirectTaxes_20-21_test_cases.json  2023_07_NHAI_test_cases.json  2023_11_Ayushman_Bharat_test_cases.json  2023_19_BharatMala_test_cases.json  2023_20_FCI_test_cases.json  2024_01_FRBM_21-22_test_cases.json  2024_13_DirectTaxes_21-22_test_cases.json  2025_03_FRBM_22-23_test_cases.json  2025_04_UnionAccounts_22-23_test_cases.json  2025_06_CPSE_test_cases.json  2025_14_DirectTaxes_22-23_test_cases.json  2025_16_UnionAccounts_23-24_test_cases.json  2025_18_FRBM_23-24_test_cases.json
tests/rag_pipeline/: __init__.py  test_query_enhancer.py
